--- a/4/index.html
+++ b/4/index.html
@@ -400,8 +400,8 @@ function type(d) {
            <button class="accordion">ABOUT THE VISUALIZATION--SCENE 4</button>
               <div class="panel">
                 <h3>In This Scene:</h3>
-                <p class="lead">Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. This scene allows users to dig in more details. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other state in the first chart. Or, in the second chart, they can know more about the population of cats of each state. Also, the third chart shows dog population in US.  </p>
-                </p>
+                <p class="lead"><b>Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. More information were provided for users to break down the pets to cats and dog numbers. These additional information is not necessary to anwser the anthor main focus "top 3 stats with pet households" in this narrative, but offers more detail for users to dig in on their own interestes. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other states in the first chart. Or, in the second chart, they know CA is still the highest number of cats, but not the highest number of dogs shown in the third chart. </p>
+                </b></p>
                 <h3>Annotations</h3>
                   <p class="lead">Top 3 Pet Households States, dog populations and cat populations were annotated in each chart. </p>
                   <h3>Parameters</h3>
