--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Scene 1: Pet Households in US -- Number One</h1>
           </div>
           <p class="lead">
-                          What is the top three states with the highest number of pet households is an interesting question. Someone may take a guess. New York? Pennsylvania? Nope. If you are interested in this question, this Pet households narrative visualization has the right information for you.</p>
+                          What are the top three states with the highest number of pet households is an interesting question. Someone may take a guess. New York? Pennsylvania? Nope. If you are interested in this question, this Pet households narrative visualization has the right information for you.</p>
           <p class="lead">
                           Let me first define what is “pet” mean here. It simply means ONLY dogs and cats. Other kinds of animals such as birds and snakes are not included in this data.  
                          <br>
@@ -77,9 +77,9 @@
            <button class="accordion">ABOUT THE VISUALIZATION--SCENE 1</button>
               <div class="panel">
                 <h3>Summary:</h3>
-                <p class="lead"><b>Martini Glass</b> structure were used in this narrative visualization. Scene 1, scene 2 and scene 3 are author driven contents which showed the top one, two and three states that has the most pet households. "Jumping off point" is in Scene 3 to lead users to the final scene, scene 4. 
+                <p class="lead"><b>Martini Glass</b> structure were used in this narrative visualization. The main focus is to answer the question started in the narrative: "What are the top three states with the highest number of pet households?" Scene 1, scene 2 and scene 3 are answering the question one by one with author driven contents which showed the top one, two and three states that has the most pet households. "Jumping off point" is in Scene 3 to lead users to the final scene, scene 4. 
                 </p>
-                <p>Scene 4 contains reader driven content. It allows users to interact with the charts and know more detail on what they are interested in. All the Scenes follow the same template. Also, <b>D3</b> were used in this Visualization on Scene 4 to offer interactions. Finally, impages was used to make the pages load faster in Scence 1,2 and 3 because no interaction needed in these three scenes. </p>
+                <p>Scene 4 contains reader driven content. It allows users to interact with the charts and know more detail on what they are interested in. All the Scenes follow the same template. Also, <b>D3</b> were used in this Visualization on Scene 4 to offer interactions. Finally, impages was used to make the pages load faster in Scence 1,2 and 3 because no interaction needed in these three scenes. (As consulted the instructor during office hour, author-driven scenes could be as simple as ONLY using text narrative without any charts.) </p>
                  
                 <h3>In This Scene:</h3>
                 
