--- a/4/index.html
+++ b/4/index.html
@@ -405,6 +405,7 @@ function type(d) {
                 <h3>Annotations</h3>
                   <p class="lead">Top 3 Pet Households States, dog populations and cat populations were annotated in each chart. </p>
                   <h3>Parameters</h3>
+                  <p class="lead">There are a few parameters used in the scene:
                 <p class="lead">1 Scene number. In this scene, scene number is “scene 4”.
 <p class="lead">2 Ranking of number of pet households. In this scene, all states are ranked.</p>
 <p class="lead">3 States. In this scene, it change to all states.</p>
