--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 </p>
                 
                   <h3>Parameters</h3>
+                  <p class="lead">There are a few parameters used in the scene:
                 <p class="lead">1 Scene number. In this Scene, it is scene 1.
 <p class="lead">2 Ranking of number of pet households. In this scene, California has the highest number of pet households.</p>
 <p class="lead">3 States. This parameter is California.</p>
