--- a/4/index.html
+++ b/4/index.html
@@ -185,6 +185,7 @@ function type(d) {
 
 </script>
 
+                     
 
 <p class="lead">
 <b>The chart below shows the Cat Population of each state.</b><br>
@@ -400,7 +401,7 @@ function type(d) {
            <button class="accordion">ABOUT THE VISUALIZATION--SCENE 4</button>
               <div class="panel">
                 <h3>In This Scene:</h3>
-                <p class="lead"><b>Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. More information were provided for users to break down the pets to cats and dog numbers. These additional information is not necessary to anwser the anthor's main focus question--the top 3 stats with most pet households--in this narrative, but offers more details for users to dig in on their own interestes. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other states in the first chart. Or, in the second chart, they know CA is still the highest number of cats, but not the highest number of dogs shown in the third chart. </p>
+                <p class="lead"><b>Following the “Jumping Off Point” on scene 3, scene 4 is the final scene for users to interact and know more information on their own interests. More information were provided for users to break down the pets numbers into cats and dog numbers. These additional information is not necessary to anwser the anthor's main focus question--the top 3 states with most pet households--in this narrative, but offers more details for users to dig in on their own interestes. For example, if users would like to know more about the highest number of pet households state, California, they can compare the difference between CA and other states in the first chart. Or, in the second chart, they know CA is still the highest number of cats, but not the highest number of dogs shown in the third chart. </p>
                 </b></p>
                 <h3>Annotations</h3>
                   <p class="lead">Top 3 Pet Households States, dog populations and cat populations were annotated in each chart. </p>
@@ -409,13 +410,13 @@ function type(d) {
                 <p class="lead">1 Scene number. In this scene, scene number is “scene 4”.
 <p class="lead">2 Ranking of number of pet households. In this scene, all states are ranked.</p>
 <p class="lead">3 States. In this scene, it change to all states.</p>
-<p class="lead">4 Red highlight state in the map is not showing in this scene.</p>
 <p class="lead">5 Adding three different charts to show ranking of number of pet households, cat populations and dog populations of each state in order to offer more interactive charts and detail for users.</p>
                 <h3>Triggers</h3>
                 <p class="lead">1 The mouse click acts as a trigger event for navigation. 
 <p class="lead">2 The mouse over every bar will trigger for the tooltip in the bar and shows the name and value of the bar.  </p>
 
-<p class="lead">4 When click on “scene 4” or “next” to change to scene 4, all the above parameters will change from other scenes to scene 4 parameters. </p>
+<p class="lead">3 When click on “scene 4” or “next” to change to scene 4, all the above parameters will change from other scenes to scene 4 parameters. </p>
+
 
                 </p>
 
